syntax = "proto3";

option go_package = "/generated";

package community;


service CommunityService {
    rpc CreateGroup(Group)returns (Status){}
    rpc GetGroup(GroupId) returns (Group){}
    rpc UpdateGroup(Group) returns (Status){}
    rpc DeleteGroup(GroupId) returns (Status){}
    rpc GetAllGroups(Req) returns (Groups){}
    rpc JoinGroupUser(JoinLeave) returns (Status){}
    rpc LeaveGroupUse(JoinLeave) returns (Status){}
    rpc UpdateGroupMeber(UserRole) returns(Status){}
    rpc CreatePost(Post) returns(Status){}
    rpc UpdatePost(Post) returns(Status){}
    rpc DeletePost(PostId) returns(Status){}
    rpc GetPost(PostId) returns(Post){}
    rpc GetGroupPost(GroupPost) returns(Post){}
    rpc CreatePostComments(Comment) returns(Status){}
    rpc GetPostComments(PostComment) returns(Comment){}
}

message Req{}

message GroupId{
    string groupId = 1;
}


message Group{
    GroupId groupId = 1;
    string name = 2;
    string description = 3;
    string createdBy = 4;
    string createdAt = 5;
}

message Status{
    bool Status = 1;
}

message Groups{
    repeated Group groups = 1;
}

message JoinLeave{
    GroupId groupId = 1;
    string userId = 2;
    string role = 3;
    string joinedAt = 4;
}

message UserRole{
    GroupId GroupId = 1;
    string userId = 2;
    string role = 3;
}

message PostId {
    string postId = 1;
}

message Post{
    PostId postId = 1;
    GroupId groupId = 2;
    string userId = 3;
    string content = 4;
    string createdAt = 5;
}

message GroupPost{
    GroupId groupId = 1;
    PostId postId = 2;
}


message CommenId{
    string commentId = 1;
}

message Comment{
    CommenId commentId = 1;
    PostId postId = 2;
    string userId = 3;
    string content = 4;
    string createdAt = 5;
}


message PostComment{
    PostId postId = 1;
    CommenId commentId = 2;
}